Closed Bug 368020 Opened 18 years ago Closed 18 years ago

background-clip and background-origin broken on line/column/page-broken frames

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dbaron, Assigned: dbaron)

Details

(Whiteboard: [patch])

Attachments

(2 files)

background-clip and background-origin don't work correctly whereever border and padding are skipped because a frame is broken over lines, columns, or pages. Patch, with testcases included, coming shortly.
Attached patch patchSplinter Review
This is the current state of my patch (minus the image the tests need, which I should check in, which is just a copy of http://developer.mozilla.org/wiki-images/en/a/a6/Repeatable-diagonal-gradient-background.png ). Tests 3 and 4 fail because -moz-background-inline-policy assumes border-box, rather than following either of background-origin or background-clip, which I think it should. I haven't yet figured out why test 1 fails, but I think it's some sort of block pagination issue.
Attached patch patchSplinter Review
Filed 2 bugs (bug 368079 and bug 368085) on the failing regression tests.
Attachment #252646 - Flags: superreview?(roc)
Attachment #252646 - Flags: review?(roc)
I've also commented out test 2, which fails in reftest but not just testing in the browser, and filed bug 368157. (Commented out rather than marked failing because I suspect the failure could be platform-specific.)
Attachment #252646 - Flags: superreview?(roc)
Attachment #252646 - Flags: superreview+
Attachment #252646 - Flags: review?(roc)
Attachment #252646 - Flags: review+
Fix checked in to trunk.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
blocking-kilimanjaro: --- → ?
blocking-kilimanjaro: ? → ---
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: