Fix handling of background-clip and background-origin to honor GetSkipSides.  b=368020  r+sr=roc